scaffold/typescript-go-main/testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/getJavaScriptSyntacticDiagnostics2.baseline
// === Syntax and Semantic Diagnostics ===
/a.js(1,1): error TS8003: 'export =' can only be used in TypeScript files.


==== /a.js (1 errors) ====
    export = b;
    ~~~~~~~~~~~
!!! error TS8003: 'export =' can only be used in TypeScript files.